--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     }
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.1",
     "@openzeppelin/contracts-upgradeable": "^4.9.0",
     "@openzeppelin/merkle-tree": "^1.0.4"
   }
